--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "isomorphic-git",
   "version": "0.0.0-development",
   "description": "A pure JavaScript reimplementation of git for node and browsers",
-  "type": "module",
   "typings": "./index.d.ts",
   "main": "./index.cjs",
   "module": "./index.js",
@@ -15,10 +14,12 @@
     "node": ">=10"
   },
   "scripts": {
+    "seth": "rmdir ~/.jsipfs/repo.lock ; node --async-stack-traces node_modules/.bin/jest --runInBand --bail --silent=false listFiles ; echo 'done test'",
     "start": "nps",
     "format": "nps format",
     "build": "nps build",
     "test": "nps test",
+    "test-list-files": "jest listFiles",
     "publish-website": "nps website",
     "prepublishOnly": "nps prepublish",
     "semantic-release": "semantic-release",
@@ -51,18 +52,19 @@
     "size_report.html"
   ],
   "dependencies": {
-    "async-lock": "^1.1.0",
+    "async-lock": "^1.2.4",
     "clean-git-ref": "^2.0.1",
     "crc-32": "^1.2.0",
     "diff3": "0.0.3",
     "git-apply-delta": "0.0.7",
-    "ignore": "^5.1.4",
-    "minimisted": "^2.0.0",
-    "pako": "^1.0.10",
+    "ignore": "^5.1.8",
+    "minimisted": "^2.0.1",
+    "npm": "^6.14.8",
+    "pako": "^1.0.11",
     "pify": "^4.0.1",
-    "readable-stream": "^3.4.0",
+    "readable-stream": "^3.6.0",
     "sha.js": "^2.4.9",
-    "simple-get": "^3.0.2"
+    "simple-get": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.0",
@@ -70,7 +72,7 @@
     "@babel/preset-env": "7.5.5",
     "@babel/runtime": "7.5.5",
     "@isomorphic-git/cors-proxy": "2.6.1",
-    "@isomorphic-git/lightning-fs": "^3.3.0",
+    "@isomorphic-git/lightning-fs": "^3.4.2",
     "@isomorphic-git/pgp-plugin": "0.0.7",
     "@semantic-release/exec": "3.3.6",
     "@types/jest": "24.0.18",
@@ -82,29 +84,30 @@
     "browserfs": "2.0.0",
     "bundlewatch": "0.2.5",
     "cross-env": "6.0.0",
-    "decompress": "^4.2.0",
+    "decompress": "^4.2.1",
     "diff-lines": "1.1.1",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "envify": "4.1.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-config-prettier-standard": "^3.0.1",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "git-http-mock-server": "1.2.1",
     "github-comment": "1.0.1",
-    "inquirer": "^7.0.0",
+    "graceful-fs": "^4.2.4",
+    "inquirer": "^7.3.3",
     "jasmine-core": "3.4.0",
     "jest": "24.9.0",
-    "jest-fixtures": "wmhilton-contrib/jest-fixtures#win32",
+    "jest-fixtures": "github:wmhilton-contrib/jest-fixtures#win32",
     "jest-junit": "7.0.0",
     "jsdoc-api": "5.0.3",
     "karma": "2.0.5",
-    "karma-browserstack-launcher": "^1.5.1",
+    "karma-browserstack-launcher": "^1.6.0",
     "karma-chrome-launcher": "3.1.0",
     "karma-edge-launcher": "0.4.2",
     "karma-fail-fast-reporter": "1.0.5",
@@ -147,5 +150,8 @@
     "type": "opencollective",
     "url": "https://opencollective.com/isomorphic-git",
     "logo": "https://opencollective.com/isomorphic-git/logo.txt"
+  },
+  "resolutions": {
+    "graceful-fs": "4.2.4"
   }
 }
